# ZZSpeeds

./: .gitignore  AutoSplitter.asl  AutoSplitterSteam.asl  LICENSE  ZZAutosplitter.update.xml  ZanzarahWindowed.dxw
WindowedZanzarah/: Launcher.vcxproj  Launcher.vcxproj.filters  Library.vcxproj  Library.vcxproj.filters  WindowedZanzarah.sln  detours.vcxproj  detours.vcxproj.filters  resource.aps
WindowedZanzarah/src/: exports.def  launcher.cpp  library.cpp  resource.aps  resource.h  resource.rc  shared.hpp
ZZAutosplitter/: Database.cs  DatabaseCards.cs  DatabaseIcons.cs  DatabaseNPCPresets.cs  DatabaseScenes.cs  GameState.cs  IInjector.cs  ITrigger.cs  Inventory.cs  Settings.cs  SettingsControl.Designer.cs  SettingsControl.cs  SettingsControl.resx  ZZAutosplitter.cs  ZZAutosplitter.csproj  ZZAutosplitter.sln  ZZAutosplitterFactory.cs
ZZAutosplitter/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
ZZAutosplitter/controls/: DefeatingEditControl.Designer.cs  DefeatingEditControl.cs  DefeatingEditControl.resx  EmptySplitRuleControl.Designer.cs  EmptySplitRuleControl.cs  GettingCardsEditControl.Designer.cs  GettingCardsEditControl.cs  GettingFairiesOfClassEditControl.Designer.cs  GettingFairiesOfClassEditControl.cs  GettingPixiesEditControl.Designer.cs  GettingPixiesEditControl.cs  GettingTotalFairiesEditControl.Designer.cs  GettingTotalFairiesEditControl.cs  IconSelectionBox.Designer.cs  IconSelectionBox.cs  (+8 more)
ZZPluginLoader/: CMakeLists.txt  vcpkg.json
ZZPluginLoader/zzloader/: zzloader.cpp
ZZPluginLoader/zzplugin/: HookTarget.hpp  zzplugin.hpp
(+20 files in other folders)
